[Graph] Fix alignments

--- a/x-pack/legacy/plugins/graph/public/components/field_manager/_field_picker.scss
+++ b/x-pack/legacy/plugins/graph/public/components/field_manager/_field_picker.scss
@@ -5,11 +5,10 @@
 
 .gphFieldPicker__selectableList {
   margin: 0 (-$euiSizeXS) (-$euiSizeXS);
+}
 
-  // TODO: Fix in EUI
-  .euiSelectableListItem__prepend {
-    line-height: 1;
-  }
+.gphFieldPicker__fieldIcon {
+  vertical-align: middle;
 }
 
 .gphFieldPicker__button {
